test/types/partial/dependent.good
dependent.chpl:9: In function 'main':
dependent.chpl:10: error: Unable to resolve partial instantiation 'D(type int(64), p=1024)'
dependent.chpl:10: note: Instantiation of field 'p' depends on uninstantiated fields: 'param b', 'const x'
